# chess_SFML

./: README.md
src/: CMakeLists.txt  board.cpp  board.h  gamemanager.cpp  gamemanager.h  main.cpp  pieces.cpp  pieces.h
src/images/: board.cpp  main.cpp
src/old_board/: board.cpp  board.h
